add_library(
    graph_obj OBJECT
    GraphFlags.cpp
    service/GraphService.cpp
    session/ClientSession.cpp
    session/SessionManager.cpp
    ExecutionEngine.cpp
    ExecutionContext.cpp
    ExecutionPlan.cpp
    Executor.cpp
    SequentialExecutor.cpp
    admin/AddHostsExecutor.cpp
    admin/RemoveHostsExecutor.cpp
    admin/CreateSpaceExecutor.cpp
    admin/DropSpaceExecutor.cpp
    admin/DescribeSpaceExecutor.cpp
    admin/ShowExecutor.cpp
    admin/ConfigExecutor.cpp
    admin/BalanceExecutor.cpp
    schema/CreateEdgeExecutor.cpp
    schema/CreateTagExecutor.cpp
    schema/AlterEdgeExecutor.cpp
    schema/AlterTagExecutor.cpp
    schema/DropTagExecutor.cpp
    schema/DropEdgeExecutor.cpp
    schema/DescribeTagExecutor.cpp
    schema/DescribeEdgeExecutor.cpp
    schema/SchemaHelper.cpp
    update/InsertVertexExecutor.cpp
    update/InsertEdgeExecutor.cpp
    update/IngestExecutor.cpp
    query/TraverseExecutor.cpp
    query/AssignmentExecutor.cpp
    query/UseExecutor.cpp
    query/UseExecutor.cpp
    query/GoExecutor.cpp
    query/PipeExecutor.cpp
    query/InterimResult.cpp
    query/VariableHolder.cpp
    query/OrderByExecutor.cpp
    query/FetchVerticesExecutor.cpp
    query/FetchEdgesExecutor.cpp
    query/FetchExecutor.cpp
    query/YieldExecutor.cpp
    query/DownloadExecutor.cpp
    query/SetExecutor.cpp
    query/FindExecutor.cpp
    query/MatchExecutor.cpp
)
add_dependencies(
    graph_obj
    parser_obj
    graph_thrift_obj
    meta_thrift_obj
    meta_client
    gflags_man_obj
    schema_obj
    stats_obj
    process_obj
    base_obj
)

add_library(
    graph_http_handler OBJECT
    service/GraphHttpHandler.cpp
)
add_dependencies(
    graph_http_handler
    base_obj
)

