add_library(
    graph_obj OBJECT
    GraphFlags.cpp
    GraphService.cpp
    ClientSession.cpp
    SessionManager.cpp
    ExecutionEngine.cpp
    ExecutionContext.cpp
    ExecutionPlan.cpp
    Executor.cpp
    TraverseExecutor.cpp
    SequentialExecutor.cpp
    UseExecutor.cpp
    GoExecutor.cpp
    PipeExecutor.cpp
    CreateEdgeExecutor.cpp
    AlterEdgeExecutor.cpp
    DescribeEdgeExecutor.cpp
    CreateTagExecutor.cpp
    AlterTagExecutor.cpp
    DropTagExecutor.cpp
    DropEdgeExecutor.cpp
    DescribeTagExecutor.cpp
    InsertVertexExecutor.cpp
    UpdateVertexExecutor.cpp
    InsertEdgeExecutor.cpp
    CreateEdgeIndexExecutor.cpp
    DropEdgeIndexExecutor.cpp
    DescribeEdgeIndexExecutor.cpp
    CreateTagIndexExecutor.cpp
    DropTagIndexExecutor.cpp
    DescribeTagIndexExecutor.cpp
    UpdateEdgeExecutor.cpp
    AssignmentExecutor.cpp
    InterimResult.cpp
    VariableHolder.cpp
    AddHostsExecutor.cpp
    RemoveHostsExecutor.cpp
    CreateSpaceExecutor.cpp
    DropSpaceExecutor.cpp
    DescribeSpaceExecutor.cpp
    ShowExecutor.cpp
    YieldExecutor.cpp
    DownloadExecutor.cpp
    OrderByExecutor.cpp
    IngestExecutor.cpp
    ConfigExecutor.cpp
    BalanceExecutor.cpp
    SchemaHelper.cpp
    FetchVerticesExecutor.cpp
    FetchEdgesExecutor.cpp
    FetchExecutor.cpp
    SetExecutor.cpp
    FindExecutor.cpp
    MatchExecutor.cpp
    DeleteVertexExecutor.cpp
)
add_dependencies(
    graph_obj
    parser_obj
    graph_thrift_obj
    meta_thrift_obj
    meta_client
    gflags_man_obj
    schema_obj
    stats_obj
    process_obj
    base_obj
)

add_library(
    graph_http_handler OBJECT
    GraphHttpHandler.cpp
)
add_dependencies(
    graph_http_handler
    base_obj
)

nebula_add_subdirectory(test)

